--- a/downloads/openbosniana-home-kde.html
+++ b/downloads/openbosniana-home-kde.html
@@ -38,7 +38,7 @@
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
     <button class="nav-drop-menu" id="dropdownBtn">
-        <i class="ri-arrow-down-fill" id="dropdownIcon"></i>
+        <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
             <p>Latest release</p>
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
