--- a/wiki/installation-guide/index.html
+++ b/wiki/installation-guide/index.html
@@ -332,8 +332,8 @@ Last update: Denis Maslo
   </div>
 
   <!-- Scripts loaded after <body> so the DOM is not blocked -->
-  <script defer src="_static/scripts/bootstrap.js"></script>
-<script defer src="_static/scripts/pydata-sphinx-theme.js"></script>
+  <script src="_static/scripts/bootstrap.js"></script>
+<script src="_static/scripts/pydata-sphinx-theme.js"></script>
 
   <footer class="bd-footer">
   </footer>
