--- a/wiki/installation-guide/index.html
+++ b/wiki/installation-guide/index.html
@@ -27,24 +27,24 @@
   </noscript>
 
   <!-- Loaded before other Sphinx assets -->
-  <link href="_static/styles/theme.css" rel="stylesheet" />
-<link href="_static/styles/pydata-sphinx-theme.css" rel="stylesheet" />
+  <link href="static/styles/theme.css" rel="stylesheet" />
+<link href="static/styles/pydata-sphinx-theme.css" rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="_static/styles/sphinx-book-theme.css" />
+    <link rel="stylesheet" type="text/css" href="static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="static/styles/sphinx-book-theme.css" />
 
   <!-- So that users can add custom icons -->
-  <script src="_static/scripts/fontawesome.js"></script>
+  <script src="static/scripts/fontawesome.js"></script>
   <!-- Pre-loaded scripts that we'll load fully later -->
-  <link rel="preload" as="script" href="_static/scripts/bootstrap.js" />
-<link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js" />
+  <link rel="preload" as="script" href="static/scripts/bootstrap.js" />
+<link rel="preload" as="script" href="static/scripts/pydata-sphinx-theme.js" />
 
-    <script src="_static/documentation_options.js"></script>
-    <script src="_static/doctools.js"></script>
-    <script src="_static/sphinx_highlight.js"></script>
-    <script src="_static/scripts/sphinx-book-theme.js"></script>
+    <script src="static/documentation_options.js"></script>
+    <script src="static/doctools.js"></script>
+    <script src="static/sphinx_highlight.js"></script>
+    <script src="static/scripts/sphinx-book-theme.js"></script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
-    <link rel="icon" href="_static/favicon.ico"/>
+    <link rel="icon" href="static/favicon.ico"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Choose the right edition" href="choose.html" />
@@ -131,8 +131,8 @@
 
 
 
-    <img src="_static/vendor-logo.svg" class="logo__image only-light" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
-    <img src="_static/vendor-logo.svg" class="logo__image only-dark pst-js-only" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
+    <img src="static/vendor-logo.svg" class="logo__image only-light" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
+    <img src="static/vendor-logo.svg" class="logo__image only-dark pst-js-only" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
 
 
 </a></div>
