--- a/wiki/installation-guide/index.html
+++ b/wiki/installation-guide/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 
@@ -112,6 +111,7 @@
 
 
   </div>
+
 
     <div class="sidebar-primary-items__start sidebar-primary__section">
         <div class="sidebar-primary-item">
@@ -291,6 +291,8 @@
 
 
           </div>
+
+
           <footer class="bd-footer-content">
 
 <div class="bd-footer-content__inner container">
@@ -332,10 +334,12 @@ Last update: Denis Maslo
   </div>
 
   <!-- Scripts loaded after <body> so the DOM is not blocked -->
-  <script src="static/scripts/bootstrap.js"></script>
-<script src="static/scripts/pydata-sphinx-theme.js"></script>
+  <script defer src="static/scripts/bootstrap.js"></script>
+<script defer src="static/scripts/pydata-sphinx-theme.js"></script>
 
   <footer class="bd-footer">
   </footer>
   </body>
 </html>
+
+
