--- a/wiki/installation-guide/choose.html
+++ b/wiki/installation-guide/choose.html
@@ -132,8 +132,8 @@
 
 
 
-    <img src="_static/vendor-logo.svg" class="logo__image only-light" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
-    <img src="_static/vendor-logo.svg" class="logo__image only-dark pst-js-only" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
+    <img src="static/vendor-logo.svg" class="logo__image only-light" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
+    <img src="static/vendor-logo.svg" class="logo__image only-dark pst-js-only" alt="OpenBosniana OS Installation Guide  documentation - Home"/>
 
 
 </a></div>
