--- a/wiki/installation-guide/search.html
+++ b/wiki/installation-guide/search.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 
@@ -5,9 +6,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>OpenBosniana OS Installation Guide &#8212; OpenBosniana OS Installation Guide  documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - OpenBosniana OS Installation Guide  documentation</title>
 
 
 
@@ -42,11 +41,13 @@
     <script src="static/doctools.js"></script>
     <script src="static/sphinx_highlight.js"></script>
     <script src="static/scripts/sphinx-book-theme.js"></script>
-    <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
+    <script>DOCUMENTATION_OPTIONS.pagename = 'search';</script>
+  <script src="static/searchtools.js"></script>
+  <script src="static/language_data.js"></script>
+  <script src="searchindex.js"></script>
     <link rel="icon" href="static/favicon.ico"/>
     <link rel="index" title="Index" href="genindex.html" />
-    <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Choose the right edition" href="choose.html" />
+    <link rel="search" title="Search" href="#" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />
@@ -68,7 +69,7 @@
   <dialog id="pst-search-dialog">
 
 <form class="bd-search d-flex align-items-center"
-      action="search.html"
+      action="#"
       method="get">
   <i class="fa-solid fa-magnifying-glass"></i>
   <input type="search"
@@ -111,9 +112,6 @@
 
 
   </div>
-
-
-
 
     <div class="sidebar-primary-items__start sidebar-primary__section">
         <div class="sidebar-primary-item">
@@ -275,9 +273,6 @@
 
 
           </div>
-
-
-
           <footer class="bd-footer-content">
 
 <div class="bd-footer-content__inner container">
@@ -326,5 +321,3 @@ Last update: Denis Maslo
   </footer>
   </body>
 </html>
-
-
