--- a/downloads/index.html
+++ b/downloads/index.html
@@ -45,8 +45,8 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-instructions/index.html">Installation instructions</a>
-            <a href="https://bosniana.org/wiki/doc/index.html">Documentation</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
      <div class="container-fluid">
