--- a/editions/index.html
+++ b/editions/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Downloading HOME | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
+    <title>OpenBosniana | Free, Private, Secure Operating System</title>
     <meta name="description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
+
     <meta property="og:site_name" content="OpenBosniana OS">
     <meta property="og:title" content="
 
-            OpenBosniana | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System
+            OpenBosniana | Free, Private, Secure Operating System
 
     ">
-    <meta property="og:url" content="https://bosniana.org/downloads/openbosniana-home-kde.html">
+    <meta property="og:url" content="https://bosniana.org/">
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
-    <link rel="canonical" href="https://www.bosniana.org/openbosniana-home-kde.html">
+    <link rel="canonical" href="https://www.bosniana.org/">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="../rss.xml">
     <link rel="manifest" href="../assets/favicon/manifest.json">
     <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
-    <meta name="application-name" content="OpenBosniana OS" />
-    <meta name="msapplication-TileColor" content="#00bcd4" />
+    <meta name="application-name" content="OpenBosniana OS"/>
+    <meta name="msapplication-TileColor" content="#00bcd4"/>
     <meta name="msapplication-TileImage" content="../assets/favicon/144x144.png">
     <meta name="msapplication-config" content="../assets/favicon/browserconfig.xml">
     <link rel="stylesheet" href="../assets/css/fonts.css">
@@ -34,127 +35,68 @@
 </head>
 
 
-  <body>
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
-    <button class="nav-drop-menu" id="dropdownBtn">
-        <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
-        <div class="nav-dropdown-content navbar-color">
-            <p>Latest release</p>
-            <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
-            <a href="https://bosniana.org/downloads/index.html">Download</a>
-            <p></p>
-            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
-            <a href="https://bosniana.org/wiki/index.html">Documentation</a>
+<body>
+<nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
+    <div class="container">
+        <div class="nav-vendor-wrap">
+            <a class="navbar-brand nav-vendor" href="../index.html"></a>
         </div>
-    </button>
-     <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
     </div>
-      <button class="btn-sakriveni">
+    <button class="btn-sakriveni">
         <a href="../bs/index.html" class="text-white">
-          <i class="ri-global-line"></i> BS </a>
-      </button>
-      <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="ri-global-line"></i> BS
+        </a>
+    </button>
+    <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img id="menu-icon" src="../assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
-      </button>
+    </button>
 
 
     <div class="collapse navbar-collapse" id="ms-navbar">
         <ul class="navbar-nav mr-3">
             <li class="nav-item"> <a href="../index.html"> <i class="ri-home-4-fill"> </i> Home</a> </li>
-            <li class="nav-item"> <a href="../project/index.html"> <i class="ri-file-info-line"> </i> Project</a> </li>
-            <li class="nav-item"> <a href="../packages/index.html"> <i class="ri-apps-line"> </i> Packages</a> </li>
+            <li class="nav-item active"> <a href="index.html"> <i class="ri-file-info-line"> </i> Project</a> </li>
+            <li class="nav-item">  <a href="../packages/index.html">   <i class="ri-apps-line"> </i> Packages</a> </li>
             <li class="nav-item"> <a href="../wiki/index.html"> <i class="ri-book-2-line"> </i> Wiki</a> </li>
             <li class="nav-item"> <a href="../blog/index.html"> <i class="ri-news-line"> </i> Blog</a> </li>
-            <li class="nav-item"> <a href="../gallery/index.html"> <i class="ri-image-fill"> </i> Gallery</a> </li>
-            <li class="nav-item active">  <a href="index.html"> <i class="ri-download-2-fill"> </i> Downloads</a> </li>
+            <li class="nav-item"> <a href="../gallery/index.html"><i class="ri-image-fill"> </i> Gallery</a> </li>
+            <li class="nav-item "> <a href="../downloads/index.html"><i class="ri-download-2-fill"> </i> Downloads</a> </li>
             <li class="nav-item "> <a href="../bs/index.html"> <i class="ri-global-line"> </i> BS</a> </li>
         </ul>
     </div>
 </nav>
+
+
+<div class="bg-light">
+<div class="container-fluid">
+<div class="mt-2 pt-2">
+    <div class="mb-2 pb-2 mt-2 pt-2">
+      <div class="container center-block bg-2-dark p-3">
+        <h2 class="text-center text-dark"><b class="bg-danger p-2 text-dark">404</b> / <span>Page not found</span></h2>
+        <h4 class="text-center text-dark mt-2 pt-2">Sorry, the page you've requested does not exist.</h4>
+      <div class="container center-block text-center p-2">
+        <a href="https://bosniana.org/" class="btn bg-dark text-white">Return to the home page
+</a>
+     </div>
+    </div>
+</div>
+</div>
 </div>
 
 
-<div class="bodymargin"></div>
-<div class="container">
-  <div class="container-fluid p-3 center-block">
-    <div class="linija-dole"></div>
-    <h2 class="text-center text-info-c">DOWNLOADS</h2>
-  </div>
-  <div class="container">
-    <h4 class=" text-dark text-center">Choose your preferred flavor and download the ISO file. Please verify the <a href="#">checksum</a> before installation. </h4>
-    <br>
-    <div class="row">
-      <div class="container-fluid">
-        <div class="card h-100 card-bckgr">
-          <div class="card-body">
-            <br>
-            <br>
-            <h3 class="card-title-b lead text-info-c">
-              <span class="nunito-dark">OpenBosniana</span> HOME KDE Install x86-64
-            </h3>
-            <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" class="btn btn-info btn-raised nunito-dark p-3 mt-2">OpenBosniana-home-KDE-092024_amd64.iso</a>
-            <br>
-            <br>
-            <p>DEFAULT USER AND PASSWORD:</p>
-            <ul class="text-start text-dark ">
-              <li> Root/User login: <p class="text-danger"> user </p4>
-              </li>
-              <li> Root/User password: <p class="text-danger"> openbosniana </p>
-              </li>
+    <div class="ms-slidebar " id="ms-slidebar">
+            <ul class="ms-slidebar-menu" id="slidebar-menu">
+                <li class="nav-item"> <a href="../index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
+                <li class="nav-item"> <a class="active" href="index.html"> <i class="ri-file-info-line"></i> Project</a> </li>
+                <li class="nav-item">  <a href="../packages/index.html"> <i class="ri-apps-line"></i> Packages</a> </li>
+                <li class="nav-item"> <a href="../wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
+                <li class="nav-item"> <a href="../blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
+                <li class="nav-item">  <a href="../gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
+                <li class="nav-item">  <a href="../downloads/index.html"> <i class="ri-download-2-fill"></i> Downloads</a> </li>
+                <li class="nav-item"> <a href="../bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
+                <div class="linija-dole"></div>
             </ul>
-            <a href="##" class="btn btn-raised nunito-dark p-3 mt-2">Integrity check</a>
-          </div>
-        </div>
-      </div>
     </div>
-    <br>
-    <br>
-    <div class="row">
-      <div class="container-fluid">
-        <div class="card h-100 card-bckgr">
-          <div class="card-body">
-            <br>
-            <br>
-            <h3 class="card-title-b lead text-info-c">
-              <span class="nunito-dark">OpenBosniana</span> HOME KDE Live x86-64
-            </h3>
-            <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" class="btn btn-info btn-raised nunito-dark p-3 mt-2">OpenBosniana-home-KDE-092024_amd64.iso</a>
-            <br>
-            <br>
-            <p>DEFAULT USER AND PASSWOR:</p>
-            <ul class="text-start text-dark ">
-              <li> Root/User login: <p class="text-danger"> user </p4>
-              </li>
-              <li> Root/User password: <p class="text-danger"> openbosniana </p>
-              </li>
-            </ul>
-            <a href="##" class="btn btn-raised nunito-dark p-3 mt-2">Integrity check</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <br>
-  </div>
-</div>
-
-
-    <div class="collapse navbar-collapse" id="ms-navbar">
-        <ul class="navbar-nav mr-3">
-            <li class="nav-item"> <a href="../index.html"> <i class="ri-home-4-fill"> </i> Home</a> </li>
-            <li class="nav-item"> <a href="../project/index.html"> <i class="ri-file-info-line"> </i> Project</a> </li>
-            <li class="nav-item"> <a href="../packages/index.html"> <i class="ri-apps-line"> </i> Packages</a> </li>
-            <li class="nav-item"> <a href="../wiki/index.html"> <i class="ri-book-2-line"> </i> Wiki</a> </li>
-            <li class="nav-item"> <a href="../blog/index.html"> <i class="ri-news-line"> </i> Blog</a> </li>
-            <li class="nav-item"> <a href="../gallery/index.html"> <i class="ri-image-fill"> </i> Gallery</a> </li>
-            <li class="nav-item active">  <a href="index.html"> <i class="ri-download-2-fill"> </i> Downloads</a> </li>
-            <li class="nav-item "> <a href="../bs/index.html"> <i class="ri-global-line"> </i> BS</a> </li>
-        </ul>
-    </div>
-</nav>
- </div>
 
 
 <div class="logo-font">
@@ -289,14 +231,6 @@ $(document).ready(function() {
 });
 </script>
 
-    <script>
-        const dropdownBtn = document.getElementById('dropdownBtn');
-        const dropdownIcon = document.getElementById('dropdownIcon');
-
-        dropdownBtn.addEventListener('click', function () {
-            this.classList.toggle('active');
-        });
-    </script>
 </body>
 </html>
 
