--- a/wiki/index.html
+++ b/wiki/index.html
@@ -45,8 +45,8 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-instructions/index.html">Installation instructions</a>
-            <a href="https://bosniana.org/wiki/doc/index.html">Documentation</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
      <div class="container-fluid">
@@ -96,7 +96,7 @@
               <br>
               <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
                   <b>HTML</b>
-                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/InstallationGuide.pdf">
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
                   <b>PDF</b>
                 </a>. </p>
             </div>
@@ -133,7 +133,7 @@
               <br>
               <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
                   <b>HTML</b>
-                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/InstallationGuide.pdf">
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
                   <b>PDF</b>
                 </a>. </p>
             </div>
