--- a/404.html
+++ b/404.html
@@ -19,21 +19,23 @@
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
     <link rel="canonical" href="https://www.bosniana.org/404.html">
-    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="https://bosniana.org/rss.xml">
-    <link rel="manifest" href="https://bosniana.org/assets/favicon/manifest.json">
-    <link rel="icon" type="image/x-icon" href="https://bosniana.org/assets/favicon/favicon.ico" />
+    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
+    <link rel="manifest" href="assets/favicon/manifest.json">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
     <meta name="application-name" content="OpenBosniana OS"/>
     <meta name="msapplication-TileColor" content="#00bcd4"/>
-    <meta name="msapplication-TileImage" content="https://bosniana.org/assets/favicon/144x144.png">
-    <meta name="msapplication-config" content="https://bosniana.org/assets/favicon/browserconfig.xml">
-    <link rel="stylesheet" href="https://bosniana.org/assets/css/fonts.css">
-    <link rel="shortcut icon" href="https://bosniana.org/assets/favicon/favicon.png">
-    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana.min.css">
-    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana-styles.css">
-    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana.css">
-    <link href="https://bosniana.org/assets/fonts/remixicon.css" rel="stylesheet">
+    <meta name="msapplication-TileImage" content="assets/favicon/144x144.png">
+    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="shortcut icon" href="assets/favicon/favicon.png">
+    <link rel="stylesheet" href="assets/css/openbosniana.min.css">
+    <link rel="stylesheet" href="assets/css/openbosniana-styles.css">
+    <link rel="stylesheet" href="assets/css/openbosniana.css">
+    <link href="assets/fonts/remixicon.css" rel="stylesheet">
 </head>
-<body>
+
+
+  <body>
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
     <button class="nav-drop-menu" id="dropdownBtn">
@@ -43,20 +45,21 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-instructions/index.html">Installation instructions</a>
-            <a href="https://bosniana.org/wiki/doc/index.html">Documentation</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="https://bosniana.org"></a>
+          <a class="navbar-brand nav-vendor" href="/"></a>
     </div>
       <button class="btn-sakriveni">
-        <a href="https://bosniana.org/bs/index.html" class="text-white">
+        <a href="bs/index.html" class="text-white">
           <i class="ri-global-line"></i> BS </a>
       </button>
       <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img id="menu-icon" src="https://bosniana.org/assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
+        <img id="menu-icon" src="assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
       </button>
+
 <div class="container-fluid">
       <div class="collapse navbar-collapse" id="ms-navbar">
         <ul class="navbar-nav">
@@ -65,37 +68,41 @@
               <i class="ri-home-4-fill"></i> Home </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/project/index.html">
+            <a href="project/index.html">
               <i class="ri-file-info-line"></i> Project </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/packages/1.html">
+            <a href="packages/1.html">
               <i class="ri-apps-line"></i> Packages </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/wiki/index.html">
+            <a href="wiki/index.html">
               <i class="ri-book-2-line"></i> Wiki </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/blog/index.html">
+            <a href="blog/index.html">
               <i class="ri-news-line"></i> Blog </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/gallery/index.html">
+            <a href="gallery/index.html">
               <i class="ri-image-fill"></i> Gallery </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/downloads/index.html">
+            <a href="downloads/index.html">
               <i class="ri-download-2-fill"></i> Downloads </a>
           </li>
           <li class="nav-item">
-            <a href="https://bosniana.org/bs/index.html">
+            <a href="bs/index.html">
               <i class="ri-global-line"></i> BS </a>
           </li>
         </ul>
       </div></div>
     </nav>
 </div>
+
+
+
+
 <div class="bg-light">
 <div class="container-fluid">
 <div class="mt-2 pt-2">
@@ -113,14 +120,14 @@
 </div>
     <div class="ms-slidebar " id="ms-slidebar">
             <ul class="ms-slidebar-menu" id="slidebar-menu">
-                <li class="nav-item"> <a href="https://bosniana.org/index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/project/index.html">  <i class="ri-file-info-line"></i> Project</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/packages/index.html">  <i class="ri-apps-line"></i> Packages</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/downloads/index.html">  <i class="ri-download-2-fill"></i> Downloads</a> </li>
-                <li class="nav-item"> <a href="https://bosniana.org/bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
+                <li class="nav-item"> <a href="index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
+                <li class="nav-item"> <a href="project/index.html">  <i class="ri-file-info-line"></i> Project</a> </li>
+                <li class="nav-item"> <a href="packages/index.html">  <i class="ri-apps-line"></i> Packages</a> </li>
+                <li class="nav-item"> <a href="wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
+                <li class="nav-item"> <a href="blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
+                <li class="nav-item"> <a href="gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
+                <li class="nav-item"> <a href="downloads/index.html">  <i class="ri-download-2-fill"></i> Downloads</a> </li>
+                <li class="nav-item"> <a href="bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
                 <div class="linija-dole"></div>
             </ul>
     </div>
@@ -146,7 +153,7 @@
 <div class="logo-font">
 <section id="sponsor">
   <div class="sponsor pt-1">
-    <img src="https://bosniana.org/assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
+    <img src="assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
   </div>
 </section>
 <div class="linija-footer mb-1 mt-1"></div>
@@ -176,6 +183,9 @@
     </button>
   </div>
 </footer>
+
+
+
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
@@ -190,7 +200,9 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
   };
 </script>
-<script src="https://bosniana.org/assets/js/plugins.min.js"></script>
+
+<script src="assets/js/plugins.min.js"></script>
+<!-- <script src="assets/js/openbosniana.js"></script> -->
 <script>
 function slidebar() {
     var t = $(".ms-slidebar"),
@@ -199,15 +211,17 @@ function slidebar() {
         i = false;
 
     n.click(function() {
-
+        // Toggle custom sidebar
         i = !i;
         t.toggleClass("open", i);
 
+        // Optionally toggle Bootstrap's navbar collapse
         var target = $(this).attr('data-bs-target');
         if (target) {
             $(target).collapse('toggle');
         }
 
+        // Update menu icon and handle background change
         updateMenuIcon(i);
     });
 
@@ -219,6 +233,7 @@ function slidebar() {
         }
     });
 
+    // To handle closing when clicking outside the sidebar
     $(document).click(function(event) {
         if (!$(event.target).closest('.ms-slidebar, .ms-toggle-left').length && i) {
             t.removeClass("open");
@@ -232,12 +247,12 @@ function slidebar() {
         const button = document.querySelector('.ms-toggle-left');
 
         if (isOpen) {
-            menuIcon.src = 'https://bosniana.org/assets/img/close.svg';
+            menuIcon.src = 'assets/img/close.svg';
             button.style.backgroundColor = 'transparent';
             button.style.transform = 'rotate(90deg)';
             button.style.transition = 'all ease .40s';
         } else {
-            menuIcon.src = 'https://bosniana.org/assets/img/menu.svg';
+            menuIcon.src = 'assets/img/menu.svg';
             button.style.backgroundColor = 'transparent';
             button.style.transform = 'rotate(0deg)';
             button.style.transition = 'all ease .40s';
@@ -259,3 +274,5 @@ $(document).ready(function() {
     </script>
 </body>
 </html>
+
+
