--- a/project/documentation.html
+++ b/project/documentation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FAQ | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
+    <title>Documentation | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
     <meta name="description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
@@ -15,10 +15,10 @@
             OpenBosniana OS | Free, Private, Secure | Free Linux Operating System
 
     ">
-    <meta property="og:url" content="https://bosniana.org/project/faq.html">
+    <meta property="og:url" content="https://bosniana.org/project/documentation.html">
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
-    <link rel="canonical" href="https://www.bosniana.org/project/faq.html">
+    <link rel="canonical" href="https://www.bosniana.org/project/documentation.html">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="../rss.xml">
     <link rel="manifest" href="../assets/favicon/manifest.json">
     <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
@@ -153,14 +153,14 @@
                 <a href="requirements.html">
                   <li>Requirements </li>
                 </a>
-                <a href="documentation.html">
-                  <li>Documentation</li>
+                <a href="#">
+                  <li class="about-active">Documentation</li>
                 </a>
                 <a href="about.html">
                   <li>About</li>
                 </a>
-                <a href="#">
-                  <li class="about-active">FAQ</li>
+                <a href="faq.html">
+                  <li>FAQ</li>
                 </a>
               </ul>
             </div>
@@ -173,134 +173,97 @@
                     <a href="index.html" class="nav-link">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a href="education.html" class="nav-link">Education</a>
+                    <a href="education.html" class="nav-link" >Education</a>
                   </li>
                   <li class="nav-item">
                     <a href="security.html" class="nav-link">Security</a>
                   </li>
                   <li class="nav-item">
-                    <a href="core.html" class="nav-link ">Core</a>
+                    <a href="core.html" class="nav-link">Core</a>
                   </li>
                   <li class="nav-item">
                     <a href="requirements.html" class="nav-link">Requirements</a>
                   </li>
                   <li class="nav-item">
-                    <a href="documentation.html" class="nav-link">Documentation</a>
+                    <a href="#" class="nav-link about-active">Documentation</a>
                   </li>
                   <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link about-active">FAQ</a>
+                    <a href="faq.html" class="nav-link">FAQ</a>
                   </li>
                 </ul>
               </header>
             </div>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="container-fluid p-3 center-block">
             <div class="linija-dole"></div>
-            <h2 class="text-center text-info-c">FREQUENTLY ASKED QUESTIONS (FAQ)</h2>
-            <br>
-            <div class="abouttext text-center">
-              <p>Here’s a list of common questions and answers to help you better understand OpenBosniana OS and its features. </p>
-            </div>
+            <h2 class="text-center text-info-c">DOCUMENTATION</h2>
           </div>
-          <div class="aboutmargin"></div>
-          <div class="card-body mt-3">
-            <h3 class="card-title-b text-info-c">
-              <span class="nunito-dark">General Questions</span>
-            </h3>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: What is OpenBosniana OS? </p>
-              <p class="p-1">A: OpenBosniana OS is a free, Linux-based operating system designed for desktops, laptops, and USB drives. It provides a secure, user-friendly experience with a focus on privacy, efficiency, and adaptability.</p>
+
+<div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+            <div class="col-md-6 ">
+              <h4 class="text-info">Documentation</h4>
+              <h2 class="nunito-dark">Installation Guide</h2>
+              <br>
+              <p class="nunito-dark">The OpenBosniana OS Installation Guide helps you download the right ISO image, create your bootable media and install OpenBosniana OS on your computer.</p>
+              <br>
+              <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                  <b>HTML</b>
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
+                  <b>PDF</b>
+                </a>. </p>
             </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Who can use OpenBosniana OS? </p>
-              <p class="p-1">A: OpenBosniana OS is suitable for everyone—from beginners to advanced users. It’s ideal for students, educators, professionals, developers, and home users.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Is OpenBosniana OS free? </p>
-              <p class="p-1">A: Yes, OpenBosniana OS is completely free to download, use, and modify.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: What desktop environments does OpenBosniana OS offer? </p>
-              <p class="p-1">A: OpenBosniana OS is available with KDE Plasma, XFCE, and MATE desktop environments.</p>
+            <div class="col-md-6 p-3">
+              <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                <img class="img-fluid" src="../assets/img/installation-guide.png" />
+              </a>
             </div>
           </div>
           <br>
-          <div class="card-body mt-3">
-            <h3 class="card-title-b text-info-c">
-              <span class="nunito-dark">Installation</span>
-            </h3>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: How do I install OpenBosniana OS? </p>
-              <p class="p-1">A: OpenBosniana OS can be installed from a LiveCD, DVD, or USB ISO image. Simply boot your system from the media and follow the guided installation process.</p>
+        </div>
+      </section>
+    </div><br>
+
+
+
+    <div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+
+
+            <div class="col-md-6 p-3">
+              <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                <img class="img-fluid" src="../assets/img/installation-guide.png" />
+              </a>
             </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: What are the system requirements?</p>
-              <p class="p-1">A: OpenBosniana OS requires at least:
-              <p>
-              <ul>
-                <li> 2 GB of RAM (4 GB recommended)</li>
-                <li> 20 GB of free disk space</li>
-                <li> A 64-bit processor</li>
-                <li> USB or DVD drive for installation</li>
-              </ul>
-              </p>
+
+            <div class="col-md-6 ">
+              <h4 class="text-info">Documentation</h4>
+              <h2 class="nunito-dark">User Guide</h2>
+              <br>
+              <p class="nunito-dark">The OpenBosniana OS User Guide is a collection of articles to help you configure your system.</p>
+              <br>
+              <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                  <b>HTML</b>
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
+                  <b>PDF</b>
+                </a>. </p>
             </div>
+
           </div>
           <br>
-          <div class="card-body mt-3">
-            <h3 class="card-title-b text-info-c">
-              <span class="nunito-dark">Features and Usage</span>
-            </h3>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: What software comes pre-installed?</p>
-              <p class="p-1">A: OpenBosniana OS includes internet browsers, email clients, office productivity tools (LibreOffice), multimedia applications, photo editors, and privacy-focused utilities.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Can I install additional software?</p>
-              <p class="p-1">A: Yes, you can install additional software using the built-in package manager, which accesses Debian repositories and the OpenBosniana OS repository.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Is OpenBosniana OS secure?</p>
-              <p class="p-1">A: Absolutely. OpenBosniana OS is designed with security and privacy as priorities, protecting users from viruses, malware, and other threats.</p>
-            </div>
-          </div>
-          <br>
-          <div class="card-body mt-3">
-            <h3 class="card-title-b text-info-c">
-              <span class="nunito-dark">Customization and Support</span>
-            </h3>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Can I customize OpenBosniana OS?</p>
-              <p class="p-1">A: Yes, OpenBosniana OS is highly customizable. You can modify the desktop environment, themes, applications, and system settings to suit your preferences.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Is OpenBosniana OS secure?</p>
-              <p class="p-1">A: Absolutely. OpenBosniana OS is designed with security and privacy as priorities, protecting users from viruses, malware, and other threats.</p>
-            </div>
-          </div>
-          <br>
-          <div class="card-body mt-3">
-            <h3 class="card-title-b text-info-c">
-              <span class="nunito-dark">Advanced Questions</span>
-            </h3>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Can I use OpenBosniana OS for development?</p>
-              <p class="p-1">A: Yes, the XFCE desktop environment is optimized for older or low-resource hardware, providing a lightweight yet functional experience.</p>
-            </div>
-            <div class="abouttext">
-              <p class="abouttext trans-bckgr p-1">Q: Is OpenBosniana OS suitable for education?</p>
-              <p class="p-1">A: Yes, the EDUCATION edition of OpenBosniana OS includes specialized tools and applications tailored for students, teachers, and academic institutions.</p>
-            </div>
-          </div>
-          <br>
-          <div class="linija-dole"></div>
-          <br>
-          <br>
+        </div>
+      </section>
+    </div><br>
+
         </div>
       </div>
     </div>
