--- a/project/security.html
+++ b/project/security.html
@@ -153,7 +153,7 @@
                 <a href="requirements.html">
                   <li>Requirements </li>
                 </a>
-                <a href="##">
+                <a href="documentation.html">
                   <li>Documentation</li>
                 </a>
                 <a href="about.html">
@@ -185,7 +185,7 @@
                     <a href="requirements.html" class="nav-link">Requirements</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">Documentation</a>
+                    <a href="documentation.html" class="nav-link">Documentation</a>
                   </li>
                   <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
