--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
@@ -104,7 +104,7 @@
               <i class="ri-file-info-line"></i> Project </a>
           </li>
           <li class="nav-item">
-            <a href="packages/1.html">
+            <a href="packages/index.html">
               <i class="ri-apps-line"></i> Packages </a>
           </li>
           <li class="nav-item">
@@ -229,126 +229,106 @@
     </div>
 </div>
 
-<div class="main-fnt">
-    <div class="trans-bckgr">
-        <div class="container-fluid">
-            <div class="container">
-                <div class="container">
-                    <div class="container">
-                        <div class="container p-3 center-block">
-                            <h2 class="text-center text-info-c">Features</h2>
-                            <div class="linija-dole"></div>
-                        </div>
-                    </div>
-                </div>
+
+
+
+
+    <div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+            <div class="col-md-6 ">
+              <h4 class="text-info">Features</h4>
+              <h2 class="nunito-dark">Simple and Easy</h2>
+
+              <p class="nunito-dark">Simply download one of the versions, create a bootable USB flash drive, and you're ready to go. It is designed to work 'out of the box' and comes fully equipped with the software and applications that most people need.</p>
+
+
             </div>
-        </div>
+            <div class="col-md-6 shadow">
+                        <div class="p-1  mt-3">
+                            <li class="list-unstyled"><img src="assets/img/home/office.svg" class="mr-3"alt="Office" width="32px"><a href="##" >Office</a><p class="p-1">With the complete LibreOffice office suite, you can use word processing programs, create presentations, drawings, spreadsheets, or even databases. LibreOffice is compatible with Microsoft Office, meaning you can open and use all your existing Microsoft Office files.</p> </li><br>
+                            <li class="list-unstyled"><img src="assets/img/home/mm.svg" class="mr-3"alt="Office" width="32px"><a href="##" >Multimedia</a><p class="p-1">Enjoy music, watch TV and movies, or listen to radio online. We include modern and popular players that handle a wide range of codecs, so you don't have to search for them.</p> </li>
 
-        <div class="container-fluid">
-            <div class="panelbox showcase full-width ready-to-go rd-md">
-                <div class="items">
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/usb.svg" alt="Simple and Easy">
-                            <h3 class="card-title-c lead text-info-c text-right">Simple and Easy</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">Use OpenBosniana OS without any installation or setup. Simply download one of the versions, create a bootable USB flash drive, and you're ready to go. It is designed to work 'out of the box' and comes fully equipped with the software and applications that most people need. Turn it on and start working.</p>
-                            </div>
                         </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/privacy.svg" alt="Privacy">
-                            <h3 class="card-title-c lead text-info-c text-right">Privacy</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">OpenBosniana OS ensures your data is handled safely and reliably. The default web browser is a modified version of Firefox to make it harder for websites to collect user data. Tracking and telemetry features are disabled by default. With our built-in tools, in addition to preserving online privacy, you can also encrypt your home partition during installation—or other storage devices later on.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/security-high.svg" alt="Safety">
-                            <h3 class="card-title-c lead text-info-c text-right">Safety</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">All Linux distributions are inherently safe. Every user has his own, protected part of the system in which work is done. OpenBosniana OS has numerous pre-configured tools and features to protect security and privacy. As long as you install software from secure repositories, you don't have to worry about unauthorized actions happening to your system.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/office.svg" alt="Office">
-                            <h3 class="card-title-c lead text-info-c text-right">Office</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">With the complete LibreOffice office suite, you can use word processing programs, create presentations, drawings, spreadsheets, or even databases. LibreOffice is compatible with Microsoft Office, meaning you can open and use all your existing Microsoft Office files.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/mm.svg" alt="Multimedia">
-                            <h3 class="card-title-c lead text-info-c text-right">Multimedia</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">Enjoy music, watch TV and movies, or listen to radio online. We include modern and popular players that handle a wide range of codecs, so you don't have to search for them.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/work.svg" alt="Design">
-                            <h3 class="card-title-c lead text-info-c text-right">Design</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">Whether you're watching or editing your favorite files, OpenBosniana OS provides you with the tools you need to turn them into something special. Work in 3D with Blender, draw or edit images in GIMP, and use Inkscape for vector graphics.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/dev.svg" alt="Developer-Friendly">
-                            <h3 class="card-title-c lead text-info-c text-right">Developer-Friendly</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">OpenBosniana OS is tailored for developers, integrating popular programming languages, compilers, interpreters, libraries, and development frameworks. Whether pre-installed or just a command away in our software repository, it streamlines and accelerates your development process.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/upd.svg" alt="Tools and Updates">
-                            <h3 class="card-title-c lead text-info-c text-right">Tools and Updates</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">With our built-in applications such as OB Welcome and OB Control Center, easily maintain, customize, and improve your system. Install the system once and update as needed.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/apps.svg" alt="Applications">
-                            <h3 class="card-title-c lead text-info-c text-right">Applications</h3>
-                            <div class="p-3">
-                                <p class="nunito-dark pt-1">Different versions of the operating system come with different default applications and tools. Take a closer look at the applications that come with the desired version:</p>
-                                <ul class="nunito-dark pb-1 pt-1">
-                                    <li><a href="##">CORE OpenBosniana Packages</a></li>
-                                    <li><a href="##">HOME Applications</a></li>
-                                    <li><a href="##">EDU Applications</a></li>
-                                    <li><a href="##">SECURITY Applications</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </section>
-
-                </div>
             </div>
+          </div>
+          <br>
         </div>
-    </div>
-</div>
+      </section>
+    </div><br>
+
+
+
+    <div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+
+
+
+            <div class="col-md-6 shadow">
+                        <div class="p-1  mt-3">
+                            <li class="list-unstyled"><img src="assets/img/home/dev.svg" class="mr-3"alt="Developer-Friendly" width="32px"><a href="##" >Developer-Friendly</a><p class="p-1">OpenBosniana OS is tailored for developers, integrating popular programming languages, compilers, interpreters, libraries, and development frameworks. Whether pre-installed or just a command away in our software repository, it streamlines and accelerates your development process.</p> </li><br>
+                            <li class="list-unstyled"><img src="assets/img/home/work.svg" class="mr-3"alt="Design" width="32px"><a href="##" >Design</a><p class="p-1">Whether you're watching or editing your favorite files, OpenBosniana OS provides you with the tools you need to turn them into something special. Work in 3D with Blender, draw or edit images in GIMP, and use Inkscape for vector graphics.</p> </li>
+
+                        </div>
+            </div>
+
+
+            <div class="col-md-6 ">
+              <h4 class="text-info">Features</h4>
+              <h2 class="nunito-dark">Privacy</h2>
+
+              <p class="nunito-dark">OpenBosniana OS ensures your data is handled safely and reliably. The default web browser is a modified version of Firefox to make it harder for websites to collect user data. Tracking and telemetry features are disabled by default. With our built-in tools, in addition to preserving online privacy, you can also encrypt your home partition during installation—or other storage devices later on.</p>
+              <br>
+
+            </div>
+
+          </div>
+          <br>
+        </div>
+      </section>
+    </div><br>
+
+
+
+    <div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+            <div class="col-md-6 ">
+              <h4 class="text-info">Features</h4>
+              <h2 class="nunito-dark">Safety</h2>
+
+              <p class="nunito-dark">All Linux distributions are inherently safe. Every user has his own, protected part of the system in which work is done. OpenBosniana OS has numerous pre-configured tools and features to protect security and privacy. As long as you install software from secure repositories, you don't have to worry about unauthorized actions happening to your system.</p>
+              <br>
+
+            </div>
+            <div class="col-md-6 shadow">
+                        <div class="p-1  mt-3">
+                            <li class="list-unstyled"><img src="assets/img/home/upd.svg" class="mr-3"alt="Tools and Updates" width="32px"><a href="##" >Developer-Friendly</a><p class="p-1">With our built-in applications such as OB Welcome and OB Control Center, easily maintain, customize, and improve your system. Install the system once and update as needed.</p> </li><br>
+                            <li class="list-unstyled"><img src="assets/img/apps.svg" class="mr-3"alt="Applications" width="32px"><a href="##" >Applications</a><p class="p-1">Different versions of the operating system come with different default applications and tools. Take a closer look at the applications that come with the desired version: <li class="list-unstyled text-center text-info">Core, Home, Edu, Security.</li></p> </li>
+
+                        </div>
+            </div>
+          </div>
+          <br>
+        </div>
+      </section>
+    </div><br>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <div class="trans-bckgr-1 pb-2">
@@ -618,23 +598,18 @@
     </div>
 
 
+<footer>
+
 <div class="logo-font">
 <section id="sponsor">
-  <div class="sponsor pt-1 bg-sponsor">
-    <p class="text-white pb-1" style="letter-spacing:2px;">Powered by OpenBosniana OS</p>
-  </div>
-</section>
-</div>
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pb-2 pt-2">
+  <div class="sponsor">
     <div class="linija-dole mb-2"></div>
-        <p style="letter-spacing:3px;"><b class="text-dark">Developed by</b> <a href="##" class="text-info-c" ><b>Denis Maslo</b></a></p>
+        <p style="letter-spacing:3px;"><b class="text-info">Developed by</b> <a href="##" class="text-white" ><b>Denis Maslo</b></a></p>
     <div class="linija-dole mt-2"></div>
   </div>
 </section>
 </div>
-<footer>
+
 <div class="logo-font">
 <section id="sponsor">
   <div class="sponsor pt-1">
